--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <nav class="navbar">
-  <a routerLink="/characters" routerLinkActive="active">Liste des personnages</a>
-  <a routerLink="/details" routerLinkActive="active"> 
-    Détails d un personnage</a>
+  <a href="/characters">Liste des personnages</a>
+  <a href="/details">Details d un personnage</a>
 </nav>
 
 <div class="content">
