--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+nav {
+  margin-bottom: 20px;
+}
+nav a {
+  margin-right: 10px;
+  text-decoration: none;
+  color: blue;
+}
+nav a:hover {
+  text-decoration: underline;
+}
