--- a/src/app/components/characters-detals/characters-detals.component.html
+++ b/src/app/components/characters-detals/characters-detals.component.html
@@ -1,1 +1,13 @@
-<p>characters-detals works!</p>
+<h2>Liste des personnages</h2>
+<div *ngIf="loading">Chargement...</div>
+<div *ngIf="error" style="color:red;">{{ error }}</div>
+<table *ngIf="!loading && !error">
+  <tr>
+    <th>ID</th>
+    <th>Nom</th>
+  </tr>
+  <tr *ngFor="let c of characters">
+    <td>{{ c.id }}</td>
+    <td>{{ c.name }}</td>
+  </tr>
+</table>
